tests/typechecker/should_pass/event_splits.csp
channel a
channel b : Bool

Evs = {|a, b|}

Check(y) = { b.x | b.x <- Evs, x ==y }

-- f(y, c.x) = x == y

-- test(y) = {f(y, z) | z <- Evs }
