tests/typechecker/should_fail/type_annotations_3.csp
f :: Set ab => (b) -> b
f(x) = x
